2004-11-25  Reinhard Max  <max@suse.de>

	* tests/tcltest.test: The order in which [glob] returns the file
	names is undefined, so tests should not depend on it.
	
2004-11-25  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* doc/Thread.3:
	* doc/Notifier.3: Added changes from the core-8-4-branch

2004-11-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/dde.n: Synchronized the documentation of the commands with
	the header of the docs and what the package actually does. Thanks
	to Andreas Kupries for spotting this.
	* win/tclWinDde.c (Tcl_DdeObjCmd): Much cleanup of argument
	parsing code.

2004-11-24  David Gravereaux <davygrvy@pobox.com>

	* generic/tclPort.h: Relative include of tclWinPort.h returned
	as it was requiring me set -I$(tcl_root)/win for my extensions
	that need to include tclInt.h and doesn't appear to serve any
	purpose for windows builds.

2004-11-24  Kevin B. Kenny  <kennykb@acm.org>

	* unix/tcl.m4 (SC_ENABLE_THREADS): Corrected bad check for
	3-argument readdir_r [Bug 1001325].
	* unix/configure: Regenerated.
	* unix/tclUnixNotfy.c: Corrected all uses of 'select' to
	manage their masks using the FD_CLR, FD_ISSET, FD_SET, and
	FD_ZERO macros rather than bit-whacking that failed under
	Solaris-Sparc-64.  [Bug 1071807]
	* win/tclWinInit.c (TclpInitLibraryPath): Removed unused
	vars 'pathc' and 'pathv' that caused compilation problems
	on VC++ with --enable-symbols.
	
2004-11-24  Don Porter  <dgp@users.sourceforge.net>

	* unix/tcl.m4 (SC_ENABLE_THREADS):	Corrected failure to determine
	the number of arguments for readdir_r on SunOS systems.  [Bug 1071701]

	* unix/configure:	autoconf-2.57

	* generic/tclCmdIL.c (InfoVarsCmd):	Corrected segfault in new
	* tests/info.test (info-19.6):	trivial matching branch [Bug 1072654]

2004-11-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tools/man2html.tcl, tools/man2html1.tcl: Update to use Tcl 8.4.
	* tools/man2html2.tcl: Fix broken .SS handling.
